# PATHeditor

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
